fix overflow pre

--- a/public/less/outfit/_fresh.less
+++ b/public/less/outfit/_fresh.less
@@ -120,6 +120,7 @@
   pre {
     background: #ECEFF1;
     padding: 1rem;
+    overflow: auto;
   }
 
   .menu li {
